--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pagos-clientes",
+  "name": "mi-proyecto-vuejs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -32,7 +36,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
@@ -41,3 +47,4 @@
     "not ie 11"
   ]
 }
+
